# whim

./: .gitignore  CMakeLists.txt  README.md
include/: argparser.hpp  base64.hpp  build.hpp  error.hpp  filesystem_watcher.hpp  html.hpp  http.hpp  live_reload.hpp  markdown.hpp  result.hpp  result_base.hpp  sha1.hpp  tcp_socket.hpp  utils.hpp  websocket.hpp
src/: argparser.cpp  base64.cpp  build.cpp  error.cpp  filesystem_watcher.cpp  html.cpp  http.cpp  live_reload.cpp  main.cpp  markdown.cpp  result_base.cpp  sha1.cpp  tcp_socket.cpp  utils.cpp  websocket.cpp
tests/: base64.cpp  html_compile.cpp  markdown_parse_metadata.cpp  sha1.cpp
tests/live_reload/: my_css.css  my_markdown.md  my_template.html
